--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularQuizPlatform</title>
+  <title>Quiz Platform</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,12 @@
 </head>
 <body>
   <app-root></app-root>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=<your-ga-tracking-ID>"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '<your-ga-tracking-ID>');
+  </script>
 </body>
 </html>
