small bug fixes

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <app-root></app-root>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=<your-ga-tracking-ID>"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=<your-GA-tracking-ID>"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', '<your-ga-tracking-ID>');
+    gtag('config', '<your-GA-tracking-ID>');
   </script>
 </body>
 </html>
